@@ -1,0 +1,39 @@
+/*
+ * Hex - a hex viewer and annotator
+ * Copyright (C) 2009-2013  Trejkaz, Hex Project
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Lesser General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
+package org.trypticon.hex.util.swingsupport;
+
+import org.trypticon.hex.util.Name;
+
+import javax.swing.ListCellRenderer;
+
+/**
+ * A combo box which renders the elements using {@link Name}
+ *
+ * @author trejkaz
+ */
+public class NameRenderingComboBox<E extends Name> extends DelegateRenderingComboBox<E> {
+    public NameRenderingComboBox(E[] items) {
+        super(items);
+    }
+
+    @Override
+    protected DelegatingListCellRenderer<? super E> createRenderer(ListCellRenderer<Object> delegate) {
+        return new NameListCellRenderer(delegate);
+    }
+}
