@@ -16,5 +16,9 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
+AccessoryBars.Interpreter.byteOrderComboBox.big=big
+AccessoryBars.Interpreter.byteOrderComboBox.little=little
+AccessoryBars.Interpreter.invalidSelection=(invalid selection)
+
 AccessoryBars.Location.selectedOffset=Selected offset:
 AccessoryBars.Location.length=Length:
